--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FaceRecognition"
+        android:theme="@style/Theme.SensorData"
         tools:targetApi="31">
         <activity
             android:name=".ui.MainActivity"
             android:screenOrientation="portrait"
             android:exported="true"
-            android:theme="@style/Theme.FaceRecognition">
+            android:theme="@style/Theme.SensorData">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
